; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lbaselib.c_luaB_load.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/lua/src/extr_lbaselib.c_luaB_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"=(load)\00", align 1
@LUA_TFUNCTION = common dso_local global i32 0, align 4
@generic_reader = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @luaB_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @luaB_load(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i8* @luaL_optstring(i32* %5, i32 2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %6, i8** %4, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @LUA_TFUNCTION, align 4
  %9 = call i32 @luaL_checktype(i32* %7, i32 1, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @lua_settop(i32* %10, i32 3)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @generic_reader, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @lua_load(i32* %12, i32 %13, i32* null, i8* %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32*, i32** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @load_aux(i32* %16, i32 %17)
  ret i32 %18
}

declare dso_local i8* @luaL_optstring(i32*, i32, i8*) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @lua_load(i32*, i32, i32*, i8*) #1

declare dso_local i32 @load_aux(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
